--- a/src/app/password-update/password-update.page.html
+++ b/src/app/password-update/password-update.page.html
@@ -1,35 +1,90 @@
 <ion-header>
-  <ion-toolbar  style="--background:#24A8F2;">
-    <ion-buttons slot="start" style="color: white;">
-      <ion-back-button defaultHref="profil"></ion-back-button>
+  <ion-toolbar style="--background: #24a8f2">
+    <ion-buttons slot="start" style="color: white">
+      <ion-back-button  text="" defaultHref="profil"></ion-back-button>
     </ion-buttons>
-   
-    <ion-title size="" style="color: white;" >Changer de mot de passe</ion-title>
-
+    <ion-title size="" style="color: white">Changer de mot de passe</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content style="background-color: white;">
-  <div class="mm" style="margin-top: 15%;">
-  <div class="inputWithIcon">
-  <input type="text" placeholder="Mot de passe actuel">
-  <i class="bi bi-shield-lock"></i></div>
-<div class="inputWithIcon">
-  <input type="text" placeholder="Nouveau mot de passe">
-  <i class="bi bi-key"></i></div>
-<div class="inputWithIcon">
-  <input type="text" placeholder="Retaper le nouveau mot de passe">
-  <i class="bi bi-key"></i></div> 
-</div>
+<ion-content style="background-color: white">
+  <div class="container">
+    <form
+      #changePasswordForm="ngForm"
+      (ngSubmit)="onChangePassword(changePasswordForm.value)"
+    >
+      <input
+        type="hidden"
+        class="form-control"
+        name="emailOrNumero"
+        placeholder="emailOrNumero"
+        ngModel="{{ numero }}"
+        required
+        ngModel
+      />
 
-<br>
-<ion-button style="width: 99%;">Mettre à jour le mot de passe</ion-button>
-<br>
-<ion-button color="medium" style="width: 99%;">Annuler</ion-button>
-<br>
-<p class="ins" style="text-align: center; margin-top: 2%;">
-  <span style="color: #ffff">
-    <a routerLink="/password-forget">Mot de Passe oublié ?</a>
-  </span>
-</p>
+      <div class="mm" style="margin-top: 15%">
+        <div class="inputWithIcon">
+          <label>Mot de passe actuel</label>
+
+          <input
+            class="form-control in"
+            name="currentpassword"
+            type="password"
+            placeholder="Ancien mot de passe"
+            minlength="6"
+            maxlength="20"
+            required
+            ngModel
+          />
+          <i class="bi bi-shield-lock"></i>
+
+          <div class="inputWithIcon">
+            <label>Nouveau mot de passe</label>
+            <input
+              class="form-control in"
+              name="newpassword"
+              type="password"
+              placeholder="Nouveau mot de passe"
+              minlength="6"
+              maxlength="20"
+              required
+              ngModel
+            />
+            <i class="bi bi-key"></i>
+          </div>
+
+          <div class="inputWithIcon">
+            <label>Confirmer Nouveau mot de passe</label>
+            <input
+              class="form-control in"
+              name="confirmpassword"
+              type="password"
+              placeholder="Retaper le nouveau mot de passe"
+              minlength="6"
+              maxlength="20"
+              required
+              ngModel
+            />
+            <i class="bi bi-key"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="butt" style="margin-top: 8%">
+        <ion-button
+          [disabled]="!changePasswordForm.valid"
+          type="submit"
+          style="width: 98%; font-size: 80%"
+        >
+          Mettre à jour le mot de passe
+        </ion-button>
+      </div>
+      <p class="ins" style="text-align: center; margin-top: 2%">
+        <span style="color: #ffff">
+          <a routerLink="/password-forget">Mot de Passe oublié ?</a>
+        </span>
+      </p>
+    </form>
+  </div>
 </ion-content>
