--- a/src/app/inscription/inscription.page.scss
+++ b/src/app/inscription/inscription.page.scss
@@ -1,37 +1,35 @@
-
-
 img {
-    width: 70%;
+  width: 70%;
 }
-.form-group{
-    margin-bottom: 6px !important;
+.form-group {
+  margin-bottom: 6px !important;
 }
-.inscription{
-    width: 70%;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: #24A8F2;
-    color: white; 
-    border-radius: 11PX;
-    height: 35px; 
+.inscription {
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #24a8f2;
+  color: white;
+  border-radius: 11px;
+  height: 35px;
 }
 
 p.ins {
-    margin-top: 8px;
+  margin-top: 8px;
 }
 label {
-    display: inline-block;
-    font-size: 11px;
+  display: inline-block;
+  font-size: 11px;
 }
-.txtAuth{
-    color: #171c25;
-    font-size: .6rem;
-    text-align: center;
-    margin: 0;
-    padding: 0;
- }
+.txtAuth {
+  color: #171c25;
+  font-size: 0.6rem;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
 
- .iconss{
-    text-align: center;
-    margin-bottom: 10px;
- }
+.iconss {
+  text-align: center;
+  margin-bottom: 10px;
+}
