--- a/src/app/password-update/password-update.page.scss
+++ b/src/app/password-update/password-update.page.scss
@@ -1,38 +1,37 @@
-input[type=text]{
-    width: 98%;
-    border: 2px solid #aaa;
-    border-radius: 4px;
-    margin: 4px 0;
-    outline: none;
-    padding: 2%;
-    box-sizing: border-box;
-    transition: .3s;
-    margin-left: 1%;
+input[type="password"] {
+  width: 99%;
+  border: 2px solid #aaa;
+  border-radius: 4px;
+  margin: 4px 0;
+  outline: none;
+  padding: 2%;
+  box-sizing: border-box;
+  transition: 0.3s;
+  margin-left: 1%;
 }
 
-input[type=text]:focus{
-border-color: dodgerblue;
-box-shadow: 0 0 8px 0 dodgerblue ;
-   
+input[type="password"]:focus {
+  border-color: dodgerblue;
+  box-shadow: 0 0 8px 0 dodgerblue;
 }
 
-.inputWithIcon input[type=text]{
-    padding-left: 40px;
+.inputWithIcon input[type="password"] {
+  padding-left: 40px;
 }
 
-.inputWithIcon{
-    position: relative;
+.inputWithIcon {
+  position: relative;
 }
 
 .inputWithIcon i {
-    position: absolute;
-    left: 0;
-    top: 3px;
-    padding: 9px 8px;
-    color: #aaa;
-    transition: .3s;
+  position: absolute;
+  left: 0;
+  top: 31px;
+  padding: 9px 8px;
+  color: #aaa;
+  transition: 0.3s;
 }
 
-.inputWithIcon input[type=text]:focus + i{
-    color: dodgerblue;
+.inputWithIcon input[type="password"]:focus + i {
+  color: dodgerblue;
 }
