--- a/src/app/vocal/vocal.page.scss
+++ b/src/app/vocal/vocal.page.scss
@@ -3,21 +3,38 @@
 //     justify-content: space-between;
 // }
 
-ion-avatar{
-    height: 45px;
-    width: 45px;
+ion-avatar {
+  height: 45px;
+  width: 45px;
 }
-h3{
-    font-weight: 700;
-    font-size: 15px;
-    margin-top: 10px;
-    margin-left: 7px;
+h3 {
+  font-weight: 700;
+  font-size: 15px;
+  margin-top: 10px;
+  margin-left: 7px;
 }
-.tout{
-    display: grid;
-    grid-template-columns: 17% 82%;
-    margin-bottom: 10px;
+.tout {
+  display: grid;
+  grid-template-columns: 17% 82%;
+  margin-bottom: 0px;
 }
 .card {
-    margin-bottom: 3%;
+  margin-bottom: 1%;
+}
+audio{
+  width: 240px;
+  height: 70%;
+ // margin-top: 0px;
+  margin: auto;
+  // display: flex;
+ // justify-content: center;
+  align-items: center;
+}
+.crd{
+  height: 105px !important;
+}
+
+.imgae {
+  width: 40px !important;
+  height: 40px;
 }
